--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,11 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.5.0
     hooks:
       # Run the linter.
       - id: ruff
-        args: ["--config controller/pyproject.toml"]
+        args: [ "--config", "controller/pyproject.toml" ]
       # Run the formatter.
       - id: ruff-format
-        args: ["--config controller/pyproject.toml"]
+        args: [ "--config", "controller/pyproject.toml" ]
 
