--- a/controller/pyproject.toml
+++ b/controller/pyproject.toml
@@ -8,12 +8,12 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 redis = "^5.0.7"
-gpiod = "^2.2.0"
 fastapi = "^0.111.0"
 gunicorn = "^22.0.0"
 pydantic = "^2.7.4"
 pydantic-settings = "^2.3.4"
 rich = "^13.7.1"
+gpiozero = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
@@ -21,11 +21,9 @@ pre-commit = "^3.7.1"
 
 [tool.ruff]
 line-length = 88
-select = ["E", "F", "W", "C", "N", "B"]
-
-[tool.ruff.lint.flake8-tidy-imports]
+lint.select = ["E", "F", "W", "C", "N", "B"]
 # Disallow all relative imports.
-ban-relative-imports = "all"
+lint.flake8-tidy-imports.ban-relative-imports = "all"
 
 [build-system]
 requires = ["poetry-core"]
