--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   traefik:
-    image: traefik:v3.0
+    image: traefik:latest
     container_name: "secretum-traefik"
     ports:
       - "80:80"
@@ -23,11 +23,33 @@ services:
       start_period: '5s'
       retries: 3
 
+  app:
+    build:
+      context: controller
+      dockerfile: Dockerfile
+    container_name: "secretum-app"
+    networks:
+      - secretum_proxy
+    environment:
+      REDIS_URL: redis://secretum-redis:6379
+    volumes:
+      - ./controller:/app:ro
+    labels:
+      - "traefik.enable=true"
+      - 'traefik.docker.network=secretum_proxy'
+      - "traefik.http.routers.app.entrypoints=http"
+      - "traefik.http.routers.app.rule=Host(`api.${SERVER_NAME}`)"
+      - 'traefik.http.routers.app.middlewares=no-auth-secured@file'
+      - "traefik.http.services.app.loadbalancer.server.port=8000"
+    restart: 'unless-stopped'
+    security_opt:
+      - 'no-new-privileges:true'
+
   redis:
     image: redis:7.0-alpine
     container_name: "secretum-redis"
-    expose:
-      - 6379
+    ports:
+      - "6379:6379"
     command: [ "redis-server", "--appendonly", "yes" ]
     networks:
       - secretum_proxy
@@ -53,7 +75,7 @@ services:
       - "traefik.enable=true"
       - 'traefik.docker.network=secretum_proxy'
       - "traefik.http.routers.redis-insight.entrypoints=http"
-      - "traefik.http.routers.redis-insight.rule=Host(`redis.${SERVER_NAME}`)"
+      - "traefik.http.routers.redis-insight.rule=Host(`insight.${SERVER_NAME}`)"
       - 'traefik.http.routers.redis-insight.middlewares=no-auth-secured@file'
       - "traefik.http.services.redis-insight.loadbalancer.server.port=5540"
     restart: 'unless-stopped'
@@ -125,6 +147,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP="false"
+      - GF_INSTALL_PLUGINS=redis-datasource
       - PROMETHEUS_URL=http://prometheus:9090
     labels:
       - "traefik.enable=true"
