--- a/controller/pyproject.toml
+++ b/controller/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^2.7.4"
 pydantic-settings = "^2.3.4"
 rich = "^13.7.1"
 gpiozero = "^2.0.1"
+lgpio = "^0.2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
