--- a/controller/pyproject.toml
+++ b/controller/pyproject.toml
@@ -15,6 +15,7 @@ pydantic-settings = "^2.3.4"
 rich = "^13.7.1"
 gpiozero = "^2.0.1"
 lgpio = "^0.2.2.0"
+scipy = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.0"
