--- a/controller/requirements.txt
+++ b/controller/requirements.txt
@@ -20,6 +20,7 @@ lgpio==0.2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+numpy==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.20.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -30,6 +31,7 @@ python-multipart==0.0.9 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 redis==5.0.8 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.7.1 ; python_version >= "3.12" and python_version < "4.0"
+scipy==1.14.1 ; python_version >= "3.12" and python_version < "4.0"
 setuptools==73.0.1 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
